--- a/web/assets/views/partials/base_sidebar.html
+++ b/web/assets/views/partials/base_sidebar.html
@@ -66,26 +66,18 @@
                         <i class="si si-speedometer"></i><span class="sidebar-mini-hide">Dashboard</span>
                     </a>
                 </li>
-                <li permission permission-only="['UPLOAD_REPORT','MANAGE_REPORT']">
-                    <a data-ui-sref="layout.template" data-ui-sref-active="active">
-                        <i class="si si-bar-chart"></i><span class="sidebar-mini-hide">Templates</span>
+                <li>
+                    <a data-ui-sref="layout.transmission" data-ui-sref-active="active">
+                        <i class="si si-speedometer"></i><span class="sidebar-mini-hide">Transmission</span>
                     </a>
                 </li>
-                <li permission permission-only="['UPLOAD_REPORT','MANAGE_REPORT']">
-                    <a data-ui-sref="layout.report-list" data-ui-sref-active="active">
-                        <i class="si si-bar-chart"></i><span class="sidebar-mini-hide">Report</span>
+                <li>
+                    <a data-ui-sref="layout.status" data-ui-sref-active="active">
+                        <i class="si si-speedometer"></i><span class="sidebar-mini-hide">Settings</span>
                     </a>
                 </li>
-                <li permission permission-only="['REVIEW_REPORT']">
-                    <a data-ui-sref="layout.review-list" data-ui-sref-active="active">
-                        <i class="si si-bar-chart"></i><span class="sidebar-mini-hide">Report For Review</span>
-                    </a>
-                </li>
-                <li permission permission-only="['MANAGE_ACCOUNT']">
-                    <a data-ui-sref="layout.user" data-ui-sref-active="active">
-                        <i class="si si-users"></i><span class="sidebar-mini-hide">Users</span>
-                    </a>
-                </li>
+
+
                 <li ng-if="false" class="nav-main-heading"><span class="sidebar-mini-hide">Examples</span></li>
                 <li ng-if="false" data-ng-class="{open: (path.indexOf('/ui/') > -1)}">
                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-badge"></i><span class="sidebar-mini-hide">UI Elements</span></a>
