--- a/web/assets/views/partials/base_sidebar.html
+++ b/web/assets/views/partials/base_sidebar.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li>
-                    <a data-ui-sref="layout.status" data-ui-sref-active="active">
+                    <a data-ui-sref="layout.setting" data-ui-sref-active="active">
                         <i class="si si-speedometer"></i><span class="sidebar-mini-hide">Settings</span>
                     </a>
                 </li>
