update more functions

--- a/web/assets/views/partials/base_header.html
+++ b/web/assets/views/partials/base_header.html
@@ -1,6 +1,6 @@
 <!-- Header Navigation Right -->
 <ul class="nav-header pull-right">
-    <li>
+    <li ng-if="false">
         <div class="btn-group" data-on-toggle="toggled(open)" data-uib-dropdown>
             <button class="btn btn-default btn-image" type="button" data-uib-dropdown-toggle>
                 <img src="assets/img/avatars/avatar10.jpg" alt="Avatar">
